contextoptions highlight instantly change duplicate switch cases to fall through instead fix songs having progress stuck when loading is cancelled Update statList.json and creatureStats.json

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -111,7 +111,7 @@
     white-space: nowrap;
     position: relative;
     transform: translateX(-50%);
-    transition: background-color 150ms;
+    /*transition: background-color 150ms;*/
 
     --distance-from-sides: 5px;
     left: calc(50% - var(--distance-from-sides));
